Added some bootstrap code in the app.component;Added on some component css;

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
-<p>My name is {{name}}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <app-header></app-header>
+            <hr>
+            <app-sidebar></app-sidebar>
+            <p>My name is {{name}}</p>
+        </div>
+    </div>
+</div>
