--- a/test-app/src/app/header/header.component.html
+++ b/test-app/src/app/header/header.component.html
@@ -2,5 +2,5 @@
 <!-- use the header tag -->
 
 <header>
-    <h1>The Header for My First Angular App</h1>
+    <h1>My First Angular App</h1>
 </header>
