Added a new course-component

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -4,7 +4,8 @@
             <app-header></app-header>
             <hr>
             <app-sidebar></app-sidebar>
-            <p>My name is {{name}}</p>
+            <p>This is the list of my courses:</p>
+            <app-course></app-course>
         </div>
     </div>
 </div>
