--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -4,11 +4,19 @@
             <app-header></app-header>
             <hr>
             <app-sidebar></app-sidebar>
-            <button class="btn btn-primary" (click)="onShowCourses()">Show courses</button>
-            <div [hidden]="!isCoursesVisible">
-                <p>This is the list of my courses:</p>
-                <app-course></app-course>
-            </div>
+
+            <hr>
+            <label>Course name:</label>
+            <input type="text" [(ngModel)]="courseName">
+            <label>Instructor name:</label>
+            <input type="text" [(ngModel)]="courseInstructor">
+            <label>Course credit points</label>
+            <input type="text" [(ngModel)]="courseCreditPoints">
+            <p>You are adding {{courseName}} with {{courseCreditPoints}} presented by {{courseInstructor}}</p>
+            <button class="btn btn-primary" (click)="onAddCourse()">Add course</button>
+
+            <hr>
+            <app-courses></app-courses>
         </div>
     </div>
 </div>
