Style binding using ngStyle on course component

--- a/test-app/src/app/course/course.component.html
+++ b/test-app/src/app/course/course.component.html
@@ -1,1 +1,3 @@
-<p>The {{courseName}} course with {{courseCreditPoints}} (cp) presented by {{courseInstuctor}}</p>
+<p>
+    <span [ngStyle]="{ color: getColor() }">&#9658;</span> The {{ courseName }} course with {{ courseCreditPoints }} (cp) presented by {{ courseInstuctor }}
+</p>
