--- a/test-app/src/app/course/course.component.html
+++ b/test-app/src/app/course/course.component.html
@@ -1,3 +1,3 @@
 <p>
-    <span [ngStyle]="{ color: getColor() }">&#9658;</span> The {{ courseName }} course with {{ courseCreditPoints }} (cp) presented by {{ courseInstuctor }}
+    <span [ngStyle]="{ color: getColor() }">&#9658;</span> The {{ course.name }} course with {{ course.creditPoints }} (cp) presented by {{ course.instructor }}
 </p>
