--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -7,13 +7,7 @@
             <app-sidebar></app-sidebar>
             <hr>
 
-            <label>Course name:</label>
-            <input type="text" [(ngModel)]="courseName">
-            <label>Instructor name:</label>
-            <input type="text" [(ngModel)]="courseInstructor">
-            <label>Course credit points</label>
-            <input type="text" [(ngModel)]="courseCreditPoints">
-            <button class="btn btn-primary" (click)="onAddCourse()">Add course</button>
+            <app-course-register (courseCreated)="OnCourseCreated($event)"></app-course-register>
             <hr>
 
             <button class="btn btn-primary" (click)="onShowCourses($event)">Show courses</button>
