Made a few visual changes; Updated the README.md;

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -4,8 +4,8 @@
       <app-header></app-header>
       <hr />
 
-      <app-sidebar></app-sidebar>
-      <hr />
+      <!-- <app-sidebar></app-sidebar>
+      <hr /> -->
 
       <app-course-register
         (courseCreated)="OnCourseCreated($event)"
