--- a/test-app/src/app/header/header.component.html
+++ b/test-app/src/app/header/header.component.html
@@ -1,6 +1,3 @@
-<!-- write a html code that will act as a header -->
-<!-- use the header tag -->
-
-<header>
-    <h1>My First Angular App</h1>
-</header>
+<h2>
+  My First Angular App!
+</h2>
