Added course description to course and course-register components; the course-register part was handled using  decorator;

--- a/test-app/src/app/course-register/course-register.component.html
+++ b/test-app/src/app/course-register/course-register.component.html
@@ -16,4 +16,9 @@
     <input class="form-control" type="text" #creditPoints />
 </div>
 
+<div class="mb-3">
+    <label class="form-label">Course description</label>
+    <textarea class="form-control" rows="3" #description></textarea>
+</div>
+
 <button class="btn btn-primary" (click)="onAddCourse({name, instructor, creditPoints})">Add course</button>
