--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-md-12">
       <app-header></app-header>
-      <hr />
+      <!-- <hr /> -->
+      <hr class="border border-primary border-3 opacity-75">
 
       <!-- <app-sidebar></app-sidebar>
       <hr /> -->
