--- a/test-app/src/app/course/course.component.html
+++ b/test-app/src/app/course/course.component.html
@@ -1,11 +1,11 @@
-<div class="row" style="border: 1px solid #ccc!important;">
-  <div class="col col-10">
-    <p>
-      <span [ngStyle]="{ color: getColor() }">&#9658;</span> The
-      {{ course.name }} course with {{ course.creditPoints }} (cp) presented by
-      {{ course.instructor }}
-    </p>
-  </div>
+<div class="row" style="border: 1px solid #ccc !important; margin: 5px 0px; padding: 3px 0px;">
+  <details class="col col-10">
+    <summary>
+      The {{ course.name }} course with {{ course.creditPoints }} (cp) presented
+      by {{ course.instructor }}
+    </summary>
+    <p>{{course.description}}</p>
+  </details>
   <div class="col col-2">
     <button class="btn btn-primary" (click)="deleteCourse()">Delete</button>
   </div>
