--- a/test-app/src/app/course/course.component.html
+++ b/test-app/src/app/course/course.component.html
@@ -7,6 +7,6 @@
     <p>{{course.description}}</p>
   </details>
   <div class="col col-2">
-    <button class="btn btn-primary" (click)="deleteCourse()">Delete</button>
+    <button class="btn btn-primary" (click)="deleteCourse()">Drop</button>
   </div>
 </div>
