--- a/test-app/src/app/course-register/course-register.component.html
+++ b/test-app/src/app/course-register/course-register.component.html
@@ -1,24 +1,28 @@
 <div class="mb-3">
-    <label class="form-label">Course name:</label>
-    <!-- <input class="form-control" type="text" [(ngModel)]="courseName" /> -->
-    <input class="form-control" type="text" #name />
+  <label class="form-label">Course name:</label>
+  <!-- <input class="form-control" type="text" [(ngModel)]="courseName" /> -->
+  <input class="form-control" type="text" #name />
 </div>
 
 <div class="mb-3">
-    <label class="form-label">Instructor name:</label>
-    <!-- <input class="form-control" type="text" [(ngModel)]="courseInstructor" /> -->
-    <input class="form-control" type="text" #instructor />
+  <label class="form-label">Instructor name:</label>
+  <!-- <input class="form-control" type="text" [(ngModel)]="courseInstructor" /> -->
+  <input class="form-control" type="text" #instructor />
 </div>
 
 <div class="mb-3">
-    <label class="form-label">Course credit points</label>
-    <!-- <input class="form-control" type="text" [(ngModel)]="courseCreditPoints" /> -->
-    <input class="form-control" type="text" #creditPoints />
+  <label class="form-label">Course credit points:</label>
+  <!-- <input class="form-control" type="text" [(ngModel)]="courseCreditPoints" /> -->
+  <input class="form-control" type="text" #creditPoints />
 </div>
 
 <div class="mb-3">
-    <label class="form-label">Course description</label>
-    <textarea class="form-control" rows="3" #description></textarea>
+  <label class="form-label">Course description:</label>
+  <textarea class="form-control" rows="3" #description></textarea>
 </div>
 
-<button class="btn btn-primary" (click)="onAddCourse({name, instructor, creditPoints})">Add course</button>
+<button
+  class="btn btn-primary"
+  (click)="onAddCourse({name, instructor, creditPoints})">
+  Add course
+</button>
