--- a/test-app/src/app/course-register/course-register.component.html
+++ b/test-app/src/app/course-register/course-register.component.html
@@ -23,6 +23,7 @@
 
 <button
   class="btn btn-primary"
-  (click)="onAddCourse({name, instructor, creditPoints})">
+  (click)="onAddCourse({name, instructor, creditPoints})"
+>
   Add course
 </button>
