--- a/test-app/src/app/header/header.component.html
+++ b/test-app/src/app/header/header.component.html
@@ -1,3 +1,37 @@
-<h2>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">My First Angular App!</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
+                    <a class="nav-link" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/courses" routerLinkActive="active"
+            >My Courses</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLink="/course-register"
+            routerLinkActive="active"
+            >Course Register</a
+          >
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled">Course Selection</a>
+                </li> -->
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- <h2>
   My First Angular App!
-</h2>
+</h2> -->
